--- a/src/scss/secondPages/_post.scss
+++ b/src/scss/secondPages/_post.scss
@@ -51,9 +51,9 @@
 		}
 	}
 	&__tag {
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 		@media (min-width: $breakpoint1920) {
-			margin-bottom: 15px;
+			margin-bottom: 10px;
 		}
 	}
 	&__tag-category {
@@ -61,6 +61,7 @@
 		font-size: 12px;
 		padding: 2px 5px;
 		line-height: 15px;
+		margin: 0 5px 5px 0;
 		@media (min-width: $breakpoint768) {
 			font-size: 8px;
 			line-height: 10px;
