--- a/src/scss/secondPages/_post.scss
+++ b/src/scss/secondPages/_post.scss
@@ -9,11 +9,13 @@
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 30px;
+	margin-left: 1px;
 	&:last-child {
 		margin-bottom: 0;
 	}
 	@media (min-width: $breakpoint768) {
 		margin-bottom: 0;
+		margin-left: 0;
 	}
 	// background-color: #2095D9;
 
