--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,4 +27,5 @@
 @import "secondPages/_post";
 @import "secondPages/_dropdown";
 @import "secondPages/_blog";
+@import "secondPages/article";
 @import "footer";
