--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -447,12 +447,23 @@ body {
 
 .tag {
 	color: $white-color;
-	font-size: 12px;
 	text-transform: uppercase;
 	font-weight: 700;
-	line-height: 15px;
-	padding: 2px 5px 3px;
 	margin-right: 10px;
+	font-weight: 700;
+	font-size: 12px;
+	padding: 2px 5px;
+	line-height: 15px;
+	@media (min-width: $breakpoint768) {
+		font-size: 8px;
+		line-height: 10px;
+		padding: 2px 5px;
+	}
+	@media (min-width: $breakpoint1310) {
+		font-size: 12px;
+		line-height: 20px;
+		padding: 0 5px;
+	}
 }
 
 .text-md-left-xl-center {
