--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -111,6 +111,15 @@ body {
 	}
 }
 
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+	main {
+		flex-grow: 1;
+	}
+}
+
 .container {
   padding: 0 20px;
 	width: 100%;
