--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -81,6 +81,105 @@
 			}
 		}
 
+	&__languages {
+		display: none;
+		column-gap: 15px;
+		row-gap: 5px;
+		color: $white-color;
+		font-size: 14px;
+		position: absolute;
+		top: 80px;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: #151923;
+		overflow: auto;
+		>p {
+			display: none;
+			font-weight: 700;
+			font-size: 24px;
+			line-height: 28px;
+		}
+		>.close-lang {
+			display: none;
+		}
+
+		&.active {
+			@media (min-width: $breakpoint768) {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-auto-rows: max-content;
+				position: fixed;
+				z-index: 60;
+				top: 50%;
+				left: 50%;
+				right: auto;
+				bottom: auto;
+				transform: translate(-50%, -50%);
+				padding: 110px 35px 35px;
+				>p {
+					display: block;
+					white-space: nowrap;
+					position: absolute;
+					top: 45px;
+					left: 50%;
+					transform: translateX(-50%);
+				}
+				>.close-lang {
+					display: block;
+					position: absolute;
+					top: 20px;
+					right: 20px;
+					width: 10px;
+					height: 10px;
+					transform: rotate(45deg);
+					cursor: pointer;
+					&::before, &::after {
+						content: '';
+						position: absolute;
+						width: 100%;
+						height: 2px;
+						top: 4px;
+						left: 0;
+						background: #fff;
+					}
+					&::after {
+						width: 2px;
+						height: 100%;
+						top: 0;
+						left: 4px;
+					}
+				}
+				+.lang-overlay {
+					position: fixed;
+					z-index: 55;
+					top: 0;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					background: rgba(0,0,0,.6);
+					backdrop-filter: blur(20px);
+				}
+			}
+		}
+	}
+
+	&__languages-btn {
+		color: $white-color;
+		display: flex;
+		align-items: center;
+		padding: 12px 14px;
+
+		img, svg {
+			display: inline-block;
+			margin-right: 7px;
+			width: 20px;
+			height: 20px;
+			overflow: hidden;
+			border-radius: 50%;
+		}
+	}
+
 	&__buttons {
 		font-family: Roboto;
 		font-weight: 700;
@@ -105,6 +204,11 @@
 		}
 		@media (min-width: $breakpoint768) {
 			display: flex;
+		}
+		svg {
+			width: 20px;
+			height: 20px;
+			border-radius: 50%;
 		}
 		span {
 			margin-left: 7px;
@@ -145,6 +249,13 @@
 			@media (min-width: $breakpoint768) {
 				flex-grow: 1;
 			}
+		}
+
+		.header__languages.active {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			grid-auto-rows: max-content;
+			padding: 0 20px;
 		}
 
 		.header__buttons {
