--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -73,10 +73,10 @@
 	&__service {
 		text-align: center;
 		margin-top: 42px;
-		display: none;
-		@media (min-width: $breakpoint1310) {
-			display: block;
-		}
+		// display: none;
+		// @media (min-width: $breakpoint1310) {
+		// 	display: block;
+		// }
 		@media (min-width: $breakpoint1920) {
 			margin-top: 25px;
 		}
@@ -95,8 +95,14 @@
 	&__subscrible-txt {
 		font-family: Montserrat;
 		font-weight: 400;
-		font-size: 14px;
+		font-size: 12px;
 		line-height: 17px;
+		max-width: 600px;
+		margin: 0 auto;
+		@media (min-width: $breakpoint768) {
+			min-width: 300px;
+			font-size: 14px;
+		}
 	}
 
 	&__core {
@@ -187,10 +193,10 @@
 	text-align: center;
 	&:last-child {
 		.plan-card__title-chip {
-			padding: 0 24px;
+			padding: 2px 24px;
 			background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
 			@media (min-width: $breakpoint768) {
-				padding: 0 33px;
+				padding: 2px 33px;
 			}
 			@media (min-width: $breakpoint1920) {
 				padding: 4px 43px;
@@ -224,7 +230,7 @@
 		font-size: 10px;
 		line-height: 12px;
 		display: inline-block;
-		padding: 0 16px;
+		padding: 2px 16px;
 		background: rgba(255, 255, 255, 0.3);
 		border-radius: 50px;
 		@media (min-width: $breakpoint768) {
