--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -341,6 +341,7 @@ body {
 	display: inline-flex;
 	align-items: center;
 	max-width: 210px;
+	min-width: 210px;
 	width: 100%;
 	position: relative;
 	padding: 11px 18px;
@@ -348,14 +349,17 @@ body {
 	cursor: pointer;
 	border-radius: 5px;
 	@media (min-width: $breakpoint768) {
-		max-width: 150px;
+		// max-width: 160px;
+		min-width: 160px;
 	}
 	@media (min-width: $breakpoint1310) {
 		padding: 10px 10px 10px 28px;
-		max-width: 170px;
+		// max-width: 170px;
+		min-width: 170px;
 	}
 	@media (min-width: $breakpoint1920) {
-		max-width: 221px;
+		// max-width: 210px;
+		min-width: 210px;
 		padding: 16px 10px 15px 23px;
 	}
 	&::before {
