--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -83,6 +83,7 @@
 
 	&__languages {
 		display: none;
+		border-radius: 10px;
 		column-gap: 15px;
 		row-gap: 5px;
 		color: $white-color;
@@ -109,6 +110,7 @@
 				display: grid;
 				grid-template-columns: repeat(3, 1fr);
 				grid-auto-rows: max-content;
+				gap: 0;
 				position: fixed;
 				z-index: 60;
 				top: 50%;
