--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -7,6 +7,7 @@ body {
 	// position: relative;
 	&.locked {
 		overflow: hidden;
+		will-change: transform;
 	}
 	@media (min-width: 767.98px) {
 		font-size: 18px;
