--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -171,6 +171,7 @@
 		display: flex;
 		align-items: center;
 		padding: 12px 14px;
+		text-transform: capitalize;
 
 		img, svg {
 			display: inline-block;
@@ -201,6 +202,7 @@
 		font-weight: 700;
 		font-size: 14px;
 		transition: all .4s ease;
+		text-transform: capitalize;
 		&:hover {
 			background: rgba(255, 255, 255, 0.05);
 		}
