--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import '../../node_modules/swiper/modules/pagination/pagination.scss';
 
 @import "unlimited";
+@import "anydevice";
 @import "plan";
 @import "begin";
 @import "partners";
