--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -342,25 +342,24 @@ body {
 	display: inline-flex;
 	align-items: center;
 	max-width: 210px;
-	min-width: 210px;
-	width: 100%;
+	// min-width: 210px;
+	min-width: 180px;
+	// width: 100%;
 	position: relative;
 	padding: 11px 18px;
 	padding: 11px 5px 11px 18px;
 	cursor: pointer;
 	border-radius: 5px;
-	@media (min-width: $breakpoint768) {
-		// max-width: 160px;
-		min-width: 160px;
-	}
+	// @media (min-width: $breakpoint768) {
+	// 	min-width: 160px;
+	// }
 	@media (min-width: $breakpoint1310) {
 		padding: 10px 10px 10px 28px;
-		// max-width: 170px;
-		min-width: 170px;
+		min-width: 221px;
 	}
 	@media (min-width: $breakpoint1920) {
 		// max-width: 210px;
-		min-width: 210px;
+		// min-width: 210px;
 		padding: 16px 10px 15px 23px;
 	}
 	&::before {
@@ -387,12 +386,14 @@ body {
 			margin-right: 17px;
 		}
 		svg {
-			width: 14px;
-			height: 14px;
-			@media (min-width: $breakpoint768) {
-				width: 25px;
-				height: 25px;
-			}
+			// width: 14px;
+			// height: 14px;
+			// @media (min-width: $breakpoint768) {
+			// 	width: 25px;
+			// 	height: 25px;
+			// }
+			width: 25px;
+			height: 25px;
 			@media (min-width: $breakpoint1920) {
 				width: 33px;
 				height: 33px;
@@ -403,16 +404,20 @@ body {
 	&__name {
 		color: $white-color;
 		span {
-			display: inline-block;
-			font-size: 12px;
-			line-height: 14px;
-			font-weight: 700;
-			@media (min-width: $breakpoint768) {
+			// display: inline-block;
+			// font-size: 12px;
+			// line-height: 14px;
+			// font-weight: 700;
 				display: block;
 				font-size: 9px;
 				line-height: 11px;
 				font-weight: 500;
-			}
+			// @media (min-width: $breakpoint768) {
+			// 	display: block;
+			// 	font-size: 9px;
+			// 	line-height: 11px;
+			// 	font-weight: 500;
+			// }
 			@media (min-width: $breakpoint1920) {
 				font-size: 11px;
 				line-height: 13px;
