--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -53,9 +53,9 @@ a, a:visited {
 	text-decoration: none;
 }
 
-a:hover {
-	text-decoration: none;
-}
+// a:hover {
+// 	text-decoration: none;
+// }
 
 ul li {
 	list-style: none;
