fix styles on home page

--- a/src/scss/_gaming.scss
+++ b/src/scss/_gaming.scss
@@ -30,7 +30,7 @@
 		justify-items: stretch;
 		justify-content: center;
 		grid-row-gap: 33px;
-		margin-bottom: 50px;
+		// margin-bottom: 50px;
 		@media (min-width: $breakpoint768) {
 			// justify-items: center;
 			grid-row-gap: 85px;
