--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -1,6 +1,6 @@
 .plan {
 	position: relative;
-	padding: 38px 0 0;
+	padding: 40px 0;
 	color: $white-color;
 	@media (min-width: $breakpoint768) {
 		padding: 65px 0 70px 0;
