--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -1,6 +1,6 @@
 .unlimited {
 	padding-top: 40px;
-	padding-bottom: 0;
+	padding-bottom: 40px;
 	color: $white-color;
 	@media (min-width: $breakpoint768) {
 		padding-top: 60px;
