--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -305,7 +305,6 @@ body {
 .second-btn {
 	position: relative;
 	color: $white-color;
-	font-family: Amiko;
 	font-weight: 700;
 	border-radius: 5px;
 	font-size: 14px;
@@ -354,13 +353,14 @@ body {
 	// 	min-width: 160px;
 	// }
 	@media (min-width: $breakpoint1310) {
-		padding: 10px 10px 10px 28px;
+		// padding: 10px 10px 10px 28px;
 		min-width: 221px;
+		padding: 16px 10px 15px 23px;
 	}
 	@media (min-width: $breakpoint1920) {
 		// max-width: 210px;
 		// min-width: 210px;
-		padding: 16px 10px 15px 23px;
+		// padding: 16px 10px 15px 23px;
 	}
 	&::before {
 		content: "";
@@ -386,15 +386,16 @@ body {
 			margin-right: 17px;
 		}
 		svg {
-			// width: 14px;
-			// height: 14px;
-			// @media (min-width: $breakpoint768) {
-			// 	width: 25px;
-			// 	height: 25px;
-			// }
+			width: 14px;
+			height: 14px;
+			fill: #fff;
+			@media (min-width: $breakpoint768) {
+				width: 25px;
+				height: 25px;
+			}
 			width: 25px;
 			height: 25px;
-			@media (min-width: $breakpoint1920) {
+			@media (min-width: $breakpoint1310) {
 				width: 33px;
 				height: 33px;
 			}
