--- a/src/scss/secondPages/_download.scss
+++ b/src/scss/secondPages/_download.scss
@@ -178,6 +178,17 @@
 		}
 	}
 
+	&__paragraph {
+		margin: 0 auto;
+		font-size: 18px;
+		line-height: 27px;
+		max-width: 305px;
+		margin-top: 20px;
+		@media (min-width: $breakpoint768) {
+			max-width: 470px;
+		}
+	}
+
 	// &__mobile-image, &__tv-image {
 	// 	margin-right: 30px;
 	// 	max-width: 180px;
