adding fix on links

--- a/src/scss/_bottomBanners.scss
+++ b/src/scss/_bottomBanners.scss
@@ -10,7 +10,8 @@
 		position: absolute;
 		display: block;
 		top: -12px;
-		right: 20px;
+		left: 50%;
+		transform: translateX(-50%);
 		width: 24px;
 		height: 24px;
 		border-radius: 50%;
