--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -16,7 +16,7 @@
 		@media (min-width: $breakpoint768) {
 			flex-direction: row;
 			justify-content: space-between;
-			column-gap: 50px;
+			// column-gap: 50px;
 		}
 	}
 
@@ -27,9 +27,6 @@
 		@media (min-width: $breakpoint768) {
 			position: static;
 			flex: 1;
-			&:nth-child(2) {
-				flex: 2;
-			}
 		}
 	}
 
