--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,4 +29,9 @@
 @import "secondPages/_dropdown";
 @import "secondPages/_blog";
 @import "secondPages/article";
+// !!PARTNER PAGE
+@import "partnerPage/becomePartnerPage";
+@import "partnerPage/yougetPartnerPage";
+@import "partnerPage/_lookingPartnerPage";
+// footer
 @import "footer";
