adding readon section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,5 +33,6 @@
 @import "partnerPage/becomePartnerPage";
 @import "partnerPage/yougetPartnerPage";
 @import "partnerPage/_lookingPartnerPage";
+@import "partnerPage/readonPartnerPage";
 // footer
 @import "footer";
