--- a/src/scss/partnerPage/_readonPartnerPage.scss
+++ b/src/scss/partnerPage/_readonPartnerPage.scss
@@ -14,10 +14,22 @@
 		background: rgba(11, 7, 32, .94);
 		z-index: -1;
 	}
+	@media (min-width: $breakpoint768) {
+		padding: 70px 0;
+	}
+	@media (min-width: $breakpoint1310) {
+		padding: 120px 0;
+	}
+	@media (min-width: $breakpoint1920) {
+		padding: 200px 0;
+	}
 
 	&__title {
 		margin-bottom: 10px;
 		text-align: center;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__txt {
@@ -25,16 +37,54 @@
 		font-size: 12px;
 		line-height: 28px;
 		text-align: center;
+		@media (min-width: $breakpoint768) {
+			font-size: 14px;
+			margin-bottom: 40px;
+		}
+		@media (min-width: $breakpoint1310) {
+			font-size: 18px;
+			margin-bottom: 70px;
+		}
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 100px;
+			font-size: 24px;
+		}
 	}
 
 	&__accordion {
+		max-width: 425px;
+		margin: 0 auto;
+		@media (min-width: $breakpoint768) {
+			max-width: 570px;
+		}
+		@media (min-width: $breakpoint1310) {
+			max-width: 875px;
+		}
+		@media (min-width: $breakpoint1920) {
+			max-width: 1240px;
+		}
 	}
 
 	&__box {
 		padding: 10px;
 		background: linear-gradient(90deg, rgba(106, 18, 159, 0.5) 0%, rgba(32, 149, 217, 0) 100%);
+		@media (min-width: $breakpoint768) {
+			padding: 10px 20px;
+		}
 		&:not(:last-child) {
 			margin-bottom: 5px;
+			@media (min-width: $breakpoint768) {
+				margin-bottom: 10px;
+			}
+			@media (min-width: $breakpoint1920) {
+				margin-bottom: 20px;
+			}
+		}
+		@media (min-width: $breakpoint1310) {
+			padding: 20px 27px;
+		}
+		@media (min-width: $breakpoint1920) {
+			padding: 34px 47px;
 		}
 	}
 
@@ -46,6 +96,19 @@
 		text-transform: uppercase;
 		line-height: 12px;
 		position: relative;
+		padding-right: 25px;
+		cursor: pointer;
+		@media (min-width: $breakpoint768) {
+			text-shadow: 2px 4px 2px rgba(0, 0, 0, 0.8);
+			font-size: 14px;
+			line-height: 30px;
+		}
+		@media (min-width: $breakpoint1310) {
+			font-size: 18px;
+		}
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+		}
 		&::before, &::after {
 			content: '';
 			position: absolute;
@@ -57,11 +120,37 @@
 			background: $white-color;
 			border-radius: 1px;
 			transition: transform .2s linear;
+			@media (min-width: $breakpoint768) {
+				height: 10px;
+				right: 5px;
+			}
+			@media (min-width: $breakpoint1310) {
+				height: 15px;
+				width: 3px;
+				border-radius: 2px;
+				right: 7px;
+			}
+			@media (min-width: $breakpoint1920) {
+				height: 20px;
+				width: 4px;
+				right: 9px;
+			}
 		}
 		&:after {
 			width: 6px;
 			height: 2px;
 			right: 1px;
+			@media (min-width: $breakpoint768) {
+				width: 10px;
+			}
+			@media (min-width: $breakpoint1310) {
+				width: 15px;
+				height: 3px;
+			}
+			@media (min-width: $breakpoint1920) {
+				width: 20px;
+				height: 4px;
+			}
 		}
 		&.active {
 			&::before, &::after {
@@ -74,6 +163,7 @@
 		max-height: 0;
 		overflow: hidden;
 		transition: all .2s linear;
+		padding-right: 25px;
 	}
 
 	&__box-item {
@@ -81,8 +171,29 @@
 		line-height: 12px;
 		color: #9B99AD;
 		padding-top: 10px;
-		+li {
-			margin-top: 10px;
+		@media (min-width: $breakpoint768) {
+			font-size: 14px;
+			line-height: 18px;
+			padding-top: 20px;
+			&:not(:first-child) {
+				padding-top: 10px;
+			}
+		}
+		@media (min-width: $breakpoint1310) {
+			font-size: 18px;
+			line-height: 27px;
+			padding-top: 30px;
+			&:not(:first-child) {
+				padding-top: 20px;
+			}
+		}
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+			line-height: 38px;
+			padding-top: 40px;
+			&:not(:first-child) {
+				padding-top: 30px;
+			}
 		}
 		a {
 			color: #00A3FF;
