--- a/src/scss/partnerPage/_readonPartnerPage.scss
+++ b/src/scss/partnerPage/_readonPartnerPage.scss
@@ -120,17 +120,23 @@
 			background: $white-color;
 			border-radius: 1px;
 			transition: transform .2s linear;
-			@media (min-width: $breakpoint768) {
+		}
+		@media (min-width: $breakpoint768) {
+			&::before {
 				height: 10px;
 				right: 5px;
 			}
-			@media (min-width: $breakpoint1310) {
+		}
+		@media (min-width: $breakpoint1310) {
+			&::before {
 				height: 15px;
 				width: 3px;
 				border-radius: 2px;
 				right: 7px;
 			}
-			@media (min-width: $breakpoint1920) {
+		}
+		@media (min-width: $breakpoint1920) {
+			&::before {
 				height: 20px;
 				width: 4px;
 				right: 9px;
@@ -140,14 +146,20 @@
 			width: 6px;
 			height: 2px;
 			right: 1px;
-			@media (min-width: $breakpoint768) {
+		}
+		@media (min-width: $breakpoint768) {
+			&::after {
 				width: 10px;
 			}
-			@media (min-width: $breakpoint1310) {
+		}
+		@media (min-width: $breakpoint1310) {
+			&::after {
 				width: 15px;
 				height: 3px;
 			}
-			@media (min-width: $breakpoint1920) {
+		}
+		@media (min-width: $breakpoint1920) {
+			&::after {
 				width: 20px;
 				height: 4px;
 			}
