adding animation on partner page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,8 @@
 @import "secondPages/_dropdown";
 @import "secondPages/_blog";
 @import "secondPages/article";
+// !Global animated
+@import "globalAnimatedElems";
 // !!PARTNER PAGE
 @import "partnerPage/becomePartnerPage";
 @import "partnerPage/yougetPartnerPage";
