fixed height bottom banner

--- a/src/scss/_bottomBanners.scss
+++ b/src/scss/_bottomBanners.scss
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: auto;
 	z-index: 20;
-	transition: all .4s ease;
+	// transition: max-height 0.2s linear;
 	&__button {
 		position: absolute;
 		display: block;
