--- a/src/scss/_platform.scss
+++ b/src/scss/_platform.scss
@@ -148,6 +148,9 @@
 		sup {
 			font-size: 14px;
 			margin-right: 5px;
+			vertical-align: top;
+			margin-top: -4px;
+			display: inline-block;
 			@media (min-width: $breakpoint1920) {
 				font-size: 20px;
 			}
